<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="gnpt.app.fcomediavilla.com.gnpt.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_textmemory1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textmemory1_task"
            android:onClick="toInitial"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/button_timereaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timereaction_task"
            android:onClick="toInitial"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/button_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photos_task"
            android:onClick="toInitial"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/button_tap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_task"
            android:onClick="toInitial"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/button_flexibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flexibility_task"
            android:onClick="toInitial"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/button_textmemory2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textmemory2_task"
            android:onClick="toInitial"
            android:layout_marginBottom="8dp" />

    </LinearLayout>


</ScrollView>
