<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:weightSum="1">

    <TextView
        android:id="@+id/login_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.16"
        android:height="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/login_bienvenida"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:height="20dp"
        android:text="@string/login_info"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/login_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:height="20dp"
        android:text="@string/login_insert"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_user"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/login_editText"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="toIndex"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textSize="18sp" />


</LinearLayout>