<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_main"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:id="@+id/register_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:paddingBottom="50px"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.16"
                android:height="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/register_name"
                android:textAlignment="viewEnd"
                android:textStyle="bold"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/editText2"
                android:hint="@string/register_editText"
                android:layout_width="450dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textSize="25sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/register_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.16"
                android:height="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/register_gender"
                android:textAlignment="viewEnd"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/register_spinner_gender"
                android:drawSelectorOnTop="true"
                android:entries="@array/entries_gender"
                android:layout_width="450dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textSize="25sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/register_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.16"
                android:height="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/register_age"
                android:textAlignment="viewEnd"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/register_spinner_age"
                android:drawSelectorOnTop="true"
                android:entries="@array/entries_age"
                android:layout_width="450dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textSize="25sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/register_ethnicity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.16"
                android:height="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/register_ethnicity"
                android:textAlignment="viewEnd"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/register_spinner_ethnicity"
                android:drawSelectorOnTop="true"
                android:entries="@array/entries_ethnicity"
                android:layout_width="450dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textSize="25sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/register_glasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.16"
                android:height="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/register_glasses"
                android:textAlignment="viewEnd"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/register_spinner_glasses"
                android:drawSelectorOnTop="true"
                android:entries="@array/entries_glasses"
                android:layout_width="450dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textSize="25sp"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/register_button"
        android:onClick="save"
        android:text="@string/register_button"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:textSize="25sp"/>
</LinearLayout>